UHF-X: Fix list-of-links arrows getting too narrow

--- a/src/scss/06_components/paragraphs/_list-of-links.scss
+++ b/src/scss/06_components/paragraphs/_list-of-links.scss
@@ -99,6 +99,7 @@ $-item-spacing: $spacing-triple;
     .link__type {
       --icon-size: 1.5rem;
       display: block;
+      flex-shrink: 0;
       height: var(--icon-size);
       margin-left: -$spacing-quarter;
       margin-top: $spacing-half;
